Changes from 1.0p4 to 1.0p5:
	- downgraded net-snmp to 5.2.3
	- fixed (again) the calculation of cpu stats, now differences
	  are returned
	- added intel's e1000 driver to detect pci-express cards
	- upgraded iproute
	- upgraded ltraf to svn rev 163

Changes from 1.0p3 to 1.0p4:
	- iptables upgraded to 1.3.6
	- upgraded net-snmp to 5.3.1
	- upgraded openssl to 0.9.7l

Changes from 1.0p2 to 1.0p3:
	- raised the default IP_MAX_MEMBERSHIPS from 20 to 128 in
	  net/ipv4/igmp.c. If anyone needs higher values, set it
	  through /proc.
	- upgraded the linux kernel to version 2.4.33.3
	- upgraded grsec to 2.1.9 for 2.4.33.3

Changes from 1.0p1 to 1.0p2:
	- upgraded madwifi to svn rev 1692
	- upgraded the kernel to version 2.4.33
	- upgraded grsec to 2.1.9
	- upgraded iptables to 1.3.5

Changes from 1.0 to 1.0p1:
	- enabled some watchdog devices in the kernel
	  all in modules
	- tuned ld-uClibc.so to skip searching in its own directory
	  first
	- upgraded postgresql lib to v7.4.13

Changes from 0.2p8 to 1.0:
	- version rename
	- improved the cfpkg_add to compare cflinux major versions
	  packages are compiled for and currently running system
	- write_helper now checks the validity of the image with
	  an sha1 digest. also, a .tar.gz file can be included in
	  the cflinux.img
	- upgraded madwifi to madwifi-ng-svn-1531
	- upgraded hostap-driver to version 0.4.7
	- upgraded hostapd to version 0.4.8
	- increased the MAX_INTERFACES in rp-pppoe's relay.h
	  (for extreme users :))
	- upgraded zlib to version 1.2.3
	- upgraded openssh to version 4.3p2
	- upgraded quagga to the latest stable (0.98.5-20060503)
	- upgraded postgresql client to v7.3.14
	- upgraded libgmp to v4.2.1
	- upgraded quagga to the latest stable (0.98.6)
	- upgraded poptop to the latest stable (1.3.0)
	- upgraded openswan to the latest stable (2.4.5)
	- upgraded wireless tools to version 28
	- upgraded ltraf to svn rev 137
	- changed the default DSA key size to 1024 bits as