@@ -23,7 +23,7 @@
 # cflinux version
 VERSION_MAJOR = 1
 VERSION_MINOR = 0
-VERSION_PATCH = 5
+VERSION_PATCH = 6
 
 RELEASE_STRING := $(VERSION_MAJOR).$(VERSION_MINOR)
 ifneq ($(VERSION_PATCH),)
